--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prisma": "^5.19.0",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.21.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vercel": "^50.4.5"
   }
 }
