--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ yarn-error.log*
 next-env.d.ts
 
 # prisma
-/prisma/migrations
+# /prisma/migrations - migrations should be committed for production
 *.db
 *.db-journal
 
