--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
-    "db:seed": "tsx scripts/seed.ts"
+    "db:seed": "tsx scripts/seed.ts",
+    "deploy:github-pages": "powershell scripts/deploy-github-pages.ps1"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
