--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:migrate:deploy": "prisma migrate deploy",
-    "db:studio": "prisma studio",
-    "db:seed": "tsx scripts/seed.ts",
-    "deploy:github-pages": "powershell scripts/deploy-github-pages.ps1"
+    "postinstall": "npx prisma generate",
+    "db:generate": "npx prisma generate",
+    "db:push": "npx prisma db push",
+    "db:migrate": "npx prisma migrate dev",
+    "db:migrate:deploy": "npx prisma migrate deploy",
+    "db:studio": "npx prisma studio",
+    "db:seed": "npx tsx scripts/seed.ts",
+    "deploy": "npm run build && wrangler pages deploy .next",
+    "preview": "wrangler pages dev .next"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
-    "@prisma/client": "^5.19.0",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -50,12 +51,13 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.18",
+    "eslint-config-next": "^16.1.3",
     "postcss": "^8.4.47",
-    "prisma": "^5.19.0",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.21.0",
     "typescript": "^5.6.3",
-    "vercel": "^50.4.5"
+    "vercel": "^50.4.5",
+    "wrangler": "^4.59.2"
   }
 }
