--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,11 @@
 name = "game-store"
 compatibility_date = "2024-01-01"
+pages_build_output_dir = ".next"
 
 [vars]
 NODE_VERSION = "18"
 
 [env.production.vars]
 NODE_ENV = "production"
+NODE_VERSION = "18"
+DATABASE_URL = "file:./prisma/prod.db"
