--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@vercel/edge-config": "^1.4.3",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -56,8 +54,6 @@
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.21.0",
-    "typescript": "^5.6.3",
-    "vercel": "^50.4.5",
-    "wrangler": "^4.59.2"
+    "typescript": "^5.6.3"
   }
 }
