--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,11 @@
-name = "game-store"
+name = "gamemarket"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = ".next"
 
 [vars]
-NODE_VERSION = "18"
+NODE_VERSION = "20"
 
 [env.production.vars]
 NODE_ENV = "production"
-NODE_VERSION = "18"
+NODE_VERSION = "20"
 DATABASE_URL = "file:./prisma/prod.db"
