Update environment configuration for local development with SQLite, refactor middleware to avoid Edge Runtime issues by implementing basic route protection, and enhance README with Netlify deployment instructions. Additionally, optimize bcryptjs import in auth.ts for dynamic loading to prevent bundling problems.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/gamestore?schema=public"
+# Database (SQLite for local development)
+DATABASE_URL="file:./prisma/dev.db"
 
 # NextAuth
 NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
