--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
+[build]
+  command = "npm run build"
+  publish = ".next"
+
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/server"
+  to = "/index.html"
   status = 200
 
 [[headers]]
