--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Build static site
         run: npm run build:static
+        env:
+          DATABASE_URL: "file:./prisma/dev.db"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
