Refactor environment configuration: switch from SQLite to PostgreSQL for local development, remove obsolete environment files, and update README with new database setup instructions. Enhance Next.js configuration for improved performance and enable React strict mode. Update package dependencies for compatibility with PostgreSQL.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Database (SQLite for local development)
-DATABASE_URL="file:./prisma/dev.db"
+# Database (PostgreSQL - use Neon, Supabase, or local PostgreSQL)
+DATABASE_URL="postgresql://user:password@ep-xxxxx.us-east-2.aws.neon.tech/neondb?sslmode=require"
 
 # NextAuth
 NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
