--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,8 @@
   command = "npm run build"
   publish = ".next"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+# Next.js handles routing internally, no redirects needed
+# Netlify will automatically serve Next.js routes correctly
 
 [[headers]]
   for = "/*"
