--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-<<<<<<< Current (Your changes)
-    "build": "prisma generate && next build",
-    "build:static": "GITHUB_PAGES=true REPO_NAME=game-store next build",
-=======
     "build": "npx prisma generate && next build",
     "build:static": "cross-env GITHUB_PAGES=true REPO_NAME=game-store next build",
->>>>>>> Incoming (Background Agent changes)
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npx prisma generate",
@@ -27,7 +22,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "pg": "^8.13.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -53,6 +50,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
@@ -61,7 +59,7 @@
     "eslint-config-next": "^16.1.3",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
-    "prisma": "^5.22.0",
+    "prisma": "^7.2.0",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.21.0",
     "typescript": "^5.6.3"
