Update .env.example: simplify DATABASE_URL format by removing unnecessary psql wrapper for PostgreSQL connection.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database (PostgreSQL - use Neon, Supabase, or local PostgreSQL)
-DATABASE_URL="psql 'postgresql://neondb_owner:npg_pIgvAX31riod@ep-weathered-morning-ae09o2se-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require'"
+DATABASE_URL="postgresql://neondb_owner:npg_pIgvAX31riod@ep-weathered-morning-ae09o2se-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
 # NextAuth
 NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
