--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@auth/prisma-adapter": "^2.5.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "pg": "^8.13.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -39,6 +38,7 @@
     "lucide-react": "^0.427.0",
     "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.25",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -49,6 +49,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.5",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
     "@types/react": "^18.3.8",
@@ -59,7 +60,7 @@
     "eslint-config-next": "^16.1.3",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
-    "prisma": "^7.2.0",
+    "prisma": "^6.19.2",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.21.0",
     "typescript": "^5.6.3"
