--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
+    "@prisma/adapter-better-sqlite3": "^7.2.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -32,7 +33,9 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.15",
     "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.15.5",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
     "@types/react": "^18.3.8",
@@ -60,7 +64,7 @@
     "eslint-config-next": "^16.1.3",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
-    "prisma": "^6.19.2",
+    "prisma": "^7.2.0",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.21.0",
     "typescript": "^5.6.3"
