--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "lucide-react": "^0.427.0",
     "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.25",
+    "next-intl": "^4.7.0",
+    "next-themes": "^0.4.6",
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
