--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.0.0",
+    "@eslint/js": "^9.0.0",
     "@netlify/plugin-nextjs": "^5.15.5",
+    "@next/eslint-plugin-next": "^14.2.35",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
