--- a/package.json
+++ b/package.json
@@ -57,10 +57,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.0",
-    "@eslint/js": "^9.0.0",
     "@netlify/plugin-nextjs": "^5.15.5",
-    "@next/eslint-plugin-next": "^16.1.3",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
@@ -68,8 +65,8 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^16.1.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.18",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "prisma": "^7.2.0",
