--- a/.vercelignore
+++ b/.vercelignore
@@ -1,9 +1,17 @@
 # Vercel Ignore File
 # Don't upload these to Vercel
 
+# Python virtual environment (IMPORTANT!)
+.venv/
+venv/
+env/
+.mypy_cache/
+__pycache__/
+*.pyc
+
 # Dependencies
-node_modules
-.pnpm-store
+node_modules/
+.pnpm-store/
 
 # Build outputs
 .next
