--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^16.1.3",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.18",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "prisma": "^7.2.0",
