--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@types/pg": "^8.11.10",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
     "eslint": "8.57.0",
