--- a/package.json
+++ b/package.json
@@ -56,21 +56,26 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@eslint/config-array": "^0.19.0",
+    "@eslint/object-schema": "^2.1.4",
     "@netlify/plugin-nextjs": "^5.15.5",
+    "@next/eslint-plugin-next": "^16.1.5",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
-    "eslint": "8.57.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "14.2.18",
     "gh-pages": "^6.3.0",
+    "glob": "^10.3.0",
     "postcss": "^8.4.47",
     "prisma": "^7.2.0",
+    "rimraf": "^5.0.0",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.21.0",
     "typescript": "^5.6.3"
