--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@auth/prisma-adapter": "^2.5.0",
     "@prisma/adapter-better-sqlite3": "^7.2.0",
     "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^7.3.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -41,7 +41,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.427.0",
-    "next": "^14.2.18",
+    "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
@@ -69,12 +69,12 @@
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.18",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^16.1.6",
     "gh-pages": "^6.3.0",
     "glob": "^10.3.0",
     "postcss": "^8.4.47",
-    "prisma": "^7.2.0",
+    "prisma": "^7.3.0",
     "rimraf": "^5.0.0",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.21.0",
