--- a/package.json
+++ b/package.json
@@ -2,17 +2,33 @@
   "name": "game-store",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npm run postbuild:fix-manifests",
+    "build": "npx prisma generate && next build",
     "build:static": "cross-env GITHUB_PAGES=true REPO_NAME=game-store next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild:fix-manifests": "node scripts/fix-client-manifests.js",
+    "postinstall": "npx prisma generate",
+    "db:generate": "npx prisma generate",
+    "db:push": "npx prisma db push",
+    "db:migrate": "npx prisma migrate dev",
+    "db:migrate:deploy": "npx prisma migrate deploy",
+    "db:studio": "npx prisma studio",
+    "db:seed": "npx tsx scripts/seed.ts",
+    "deploy": "npm run build && wrangler pages deploy .next",
     "deploy:github": "npm run build:static && npm run deploy:github:pages",
-    "deploy:github:pages": "gh-pages -d out"
+    "deploy:github:pages": "gh-pages -d out",
+    "preview": "wrangler pages dev .next"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.5.0",
+    "@electric-sql/pglite": "^0.3.2",
+    "@prisma/adapter-better-sqlite3": "^7.2.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -22,39 +38,42 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.15",
+    "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
-    "next": "^16.1.6",
+    "next": "^14.2.18",
+    "next-auth": "^5.0.0-beta.25",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "pg": "^8.13.1",
+    "pglite-prisma-adapter": "^0.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "stripe": "^17.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@eslint/config-array": "^0.19.0",
-    "@eslint/object-schema": "^2.1.4",
     "@netlify/plugin-nextjs": "^5.15.5",
-    "@next/eslint-plugin-next": "^16.1.5",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.7.5",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^16.1.6",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.18",
     "gh-pages": "^6.3.0",
-    "glob": "^10.3.0",
     "postcss": "^8.4.47",
-    "rimraf": "^5.0.0",
+    "prisma": "^7.2.0",
     "tailwindcss": "^3.4.13",
+    "tsx": "^4.21.0",
     "typescript": "^5.6.3"
   }
 }
